--- a/docs/usp570/rr_usp570.Rmd
+++ b/docs/usp570/rr_usp570.Rmd
@@ -2,10 +2,10 @@
 title: "Reading reflections"
 subtitle: "USP 570"
 author: 'Shen Qu'
-date: "Week 6"
+date: "Week 7"
 output:
-  word_document: null
   pdf_document: default
+  word_document: null
 bibliography: bib_usp570.bib
 mainfont: Times New Roman
 geometry: margin=1in
@@ -15,7 +15,7 @@ fontsize: 12pt
 
 ```{r setup, include=F}
 knitr::opts_chunk$set(message=FALSE, warning=F, echo=F)
-knitr::kable
+
 options(width = 2000)
 options(repos="https://cran.rstudio.com")
 
@@ -23,22 +23,46 @@ options(repos="https://cran.rstudio.com")
 ```
 
 
- - 'Diamond of Evaluation'
+ - The 'Diamond of Design'
  
-@levinson2018metropolitan [Chapter.10] introduced five criteria for evaluating transportation and land use planning, which are called the Diamond of Evaluation comprising the five "Es." Efficiency and equity are the classic perspectives of analysis. Environmental impacts are also a widely accepted perspective. The measures of experience involves some comprehensive factors. The last criterion, expediency, is more like a mechanism for decision-making and weighing the options. The five points of view reflect the complexity of urban transportation and land use system and then result in differing claims or proposed solutions. The author also mentioned another evaluation paradigm, which including four types of architecture (functional, physical, technical, and dynamic operational) and four attributes (robustness, adaptability, flexibility, and scalability).
+@levinson2018metropolitan [Chapter.11] introduced a new 'Diamond', a structure of four key design tenents-hierarchy, morphology, layers, and  architectural content. Here author define the term 'design' as "how elements of place and plexus arrange their parts into a whole on a variety of scales, from the neighborhood to the metropolis." This framework even coveres the cities system as a high-level hierarchy place. This perspective is more from engineering or computer science. The author compare the layers of place and plexus with the OSI (Open Systems Interconnetion) Model, a computer networking framwork. This view point is different with the planner who have design background but it provide a powerful tools to explain the complexity of urban land use and transportation.
 
 
 
 
- - Replacing LOS with VMT
+ - Objectively measure subjective qualities
 
-Senate Bill 743 in California is a meaningful change in environmental impact assessment. It replaced the previous measure of auto congestion, level of service (LOS), with vehicle miles traveled (VMT). From the perspective of efficiency, policy-makers and public realized relying on LOS is not the solution but reinforces the traffic problems. Road supplement will never catch up the growth of demand, enforce the auto dependency, and "trap cities in an endless cycle of road-widening projects." The evaluation of efficiency also should focus on people's needs and activities, consider the regional effects, long-term goals of transportation and land use as a whole, not limit in road network itself. The VMT metric relies on fewer assumptions and is cheaper. Moreover, VMT can better reflect the outcomes in regional scale, can capture a variety of widely recognized negative social, environmental, and land-use impacts.
+ The study by @ewing2006identifying attempts to quantitatively measure five urban design qualities in terms of physical characteristics of street. This reaserch try to answer two questions: 
+1. Which urban design qualities have significant effects on the average value of walkability and how much are the effects ?
+2. Which physical features have significant effects on the average scores of urban design qulities and how much are the effects?
 
- - Discussion: Diamond or Onion?
- 
-Thinking of the relationship between the five 'Es', I find an onion structure may better describe the relationship among them. The five 'Es' don't play equal roles. Efficiency is the primary power of running, the core value of evaluation. Other outlayers such as equity, environment, and expediency are adjustment tools to make the assessment more complete. We know a single perspective of efficiency is imperfect. However, a single perspective of environment or expediency doesn't work. In the process of decision-making, efficiency is step one. We first need to prove the benefits and then consider the options for improving equity and other issues. If putting equity or environment on the central place and treating efficiency as an ancillary position, the whole system will slow down even break up. In the case of SB 743 in California, GHG emissions reduction, human health, and economic growth are the primary reason, which all belong to the generalized range of efficiency. Less VMT responses the modal equity but doesn't help other equity issues like "the last ones in are the ones who pay." 
+The research team select nine from 51 perceptual qualities, 48 from more than video clips, and selest 10 urban design and planning experts. 
+The expert panel are invloved in defining the 'operational' and give the walkability ratings for each clips and assign a score for each quality on a scale from 1 (low) to 5 (high).
 
-It is necessary to clarify that using partial or short-term efficiency to evaluate a project is a misunderstanding. The case of SB 743 shows that we admit the one-sided traffic efficiency doesn't represent social efficiency and even hurt the overall and long-term efficiency. This is the primary reason for the change. Coming back to the five attributes of good measures of effectiveness, VMT is clear, calculable, and comparable. But it is more like an indicator that less is better. It can't tell us the whole gain and loss. The utility by economists is still the best measure for the transport–land use system. Some economic concepts and methods, such as the value of a statistical life (VSL) and the cost of climate change, try to integrate the different perspectives and provide a uniform metric as wide as possible. Expediency says that, currently, VMT is the best criteria among the available tools in determining the transportation impacts of projects at the local level.
+This study used the fractional factorial design, the crossed multilevel Design, random effects models, and linear regression models to built up the relationship among physical teatures, urban design qulities ad overall walkability.
+
+At the end the team dropped four qualities and choose imageability, enclosure, human scale, and transparency as the measurement of walkability. This study found that 38 of more than 130 physical features have significant effects on one or more perceptual qualities.
+In a later paper, @ewing2009measuring gave all the consensus qualitaitive definiations and operational definitions for each qualities and identify detailed physical features associated with each qualitty
+
+ - Discussion: predetermined or prior information.
+
+In the part of experiment design, research team define their purpose are "trying to operationalize design concepts, not assess public preferences". They believe "average person" cannot rate streetscapes as to their “legibility,” “transparency,” and so on. The selection of video clips is also to match the perceptual qualities. At the end, this study use five criteria to examine which urban design qualities are more amenable and would be defined operationally in the field survey instrument. The criteria include the significant level in regression models, the ICC (Intraclass Correlation Coefficient reflects the proportion of the variance of an observation that is the result of differences between treatments) and Variance Components in random effects models. Technically, this reaserch is for comparing which qualities are more operational rather than proving the relationship between walkability and physical features. 
+
+The part of the fractional factorial design (FFD) is puzzling. FFD is for simplify and improve experiment. [^1] The $2^{8-4}$ FFD means k=8 factors, p=4 independent generators and 48 observations can assign each of 16 runs with 3 replication. Properly choosing the generators make the effects of potential interest are not aliased with each other. The result of FFD should tell us which factors and interactions are improtant and negligible. However, the papar don't provide the list of generators and alias, don't clarify which factors are confounded and which factors and interaction have significant effects. 
+
+[^1]: "A major use of fractional factorials is in screening experiments—experiments in which many factors are considered and the objective is to identify those factors that have large effects. Screening experiments are usually performed in the early stages of a project when many of the factors initially considered likely have little or no effect on the response. The factors identified as important are then investigated more thoroughly in subsequent experiments."
+
+On the contrary, this reaserch use FFD as a method of sample selection. "The $2^{8-4}$ sample allowed us to capture the main effects of each urban design quality on overall walkability,...to maximize geographic diversity." [@clemente2005identifying]
+Actually, what this step do is not sample selection, is treatment selecetion. The 48 clips are be rated by viewer in the next step. 
+Moreover, a significant interaction will often mask the significance of main effects. In the presence of significant interaction, the experimenter must usually examine the levels of one factor, say A, with levels of the other factors fixed to draw conclusions about the main effect of A.
+
+The 48 clips are selceted to match the selection of qualities. The raters have simular opinions on them, and highly consistent with previous literatures. Both of the viewers and the scenes are not randomly selected. The relationship about qualities and walkability are predetermined. It just prove some qualities are more measurable than others. 
+
+It is not strange that "eight of the nine qualities were collinear. Tolerance values were unacceptably low when all variables were included in a regression at once." In this situation, we cannont extend the conclusions to all treatments in the population.
+
+To examine the true relationship 
+
+"The Bayesian paradigm prescribes that the sample information $f(\vec x|\theta)$ be combined with the prior information $\pi(\theta)$ using Bayes' Theorem to obtain the posterior distribution $\pi(\theta|\vec x)$. All inferences about $\theta$ are now based on the posterior distribution."
 
 
 References {#references .unnumbered}
