--- a/static/stat563/me_stat563.Rmd
+++ b/static/stat563/me_stat563.Rmd
@@ -56,7 +56,7 @@ $$=P(-\sum_{i=1}^{10}\ln x_i\le 10.85081|\lambda=1)=P(-2\sum_{i=1}^{10}\ln x_i\l
 
 ```{r echo=FALSE, out.width='45%'}
 curve(dchisq(x, df=20), col='red', main = "Chi-Square Density Graph",from=0,to=60); abline(v=10.85081,lty=2);text(10.85081,0, "10.85")
-curve(dchisq(2*x, df=20),add = TRUE,col='blue')
+curve(dchisq(2*x, df=20),add = TRUE,col='blue',lty=2)
 polygon(c(0,seq(0,10.85081,0.01),10.85081),c(0,dchisq(2*seq(0,10.85081,0.01), df=20),0), density=10, angle=45,lty =3)
 ```
 
@@ -72,7 +72,7 @@ For $H_0: \lambda=1/2$, $H_1:\lambda=\lambda_1$ where $\lambda_1>1/2$, Neyman-Pe
 
 $$\Lambda=\frac{\sup L(1/2|x)}{\sup L(\lambda_{1}|x)}=\frac{(1/2)^{10}(\prod_{i=1}^{10} x_i)^{1/2-1}}{(\lambda_1)^{10}(\prod_{i=1}^{10} x_i)^{\lambda_1-1}}=(2\lambda_1)^{-10}e^{(1/2-\lambda_1)\sum_{i=1}^{10} x_i}\overset{set}{\le} C$$
 
-Take derivative of both sides, $-10\ln(2\lambda_1)(\lambda_1-1/2)(-\sum_{i=1}^{10})\ln x_i\le \ln C$
+Take derivative of both sides, $-10\ln(2\lambda_1)(\lambda_1-1/2)(-\sum_{i=1}^{10}\ln x_i)\le \ln C$
 
 For $\lambda_1-1/2\ge0$,$\Lambda\le C$ is equivalent $-\sum_{i=1}^{10}\ln x_i\le C'$, the most powerfule test is $T=-\sum_{i=1}^{10}\ln x_i$
 
