--- a/static/usp570/bib_usp570.bib
+++ b/static/usp570/bib_usp570.bib
@@ -461,3 +461,10 @@
   author={Clemente, Otto and Ewing, Reid},
   year={2005}
 }
+
+@book{montgomery2017design,
+  title={Design and analysis of experiments},
+  author={Montgomery, Douglas C},
+  year={2017},
+  publisher={John wiley \& sons}
+}
