--- a/static/usp570/rr_usp570.Rmd
+++ b/static/usp570/rr_usp570.Rmd
@@ -27,42 +27,34 @@ options(repos="https://cran.rstudio.com")
  
 @levinson2018metropolitan [Chapter.11] introduced a new 'Diamond', a structure of four key design tenents-hierarchy, morphology, layers, and  architectural content. Here author define the term 'design' as "how elements of place and plexus arrange their parts into a whole on a variety of scales, from the neighborhood to the metropolis." This framework even coveres the cities system as a high-level hierarchy place. This perspective is more from engineering or computer science. The author compare the layers of place and plexus with the OSI (Open Systems Interconnetion) Model, a computer networking framwork. This view point is different with the planner who have design background but it provide a powerful tools to explain the complexity of urban land use and transportation.
 
-
-
-
  - Objectively measure subjective qualities
 
- The study by @ewing2006identifying attempts to quantitatively measure five urban design qualities in terms of physical characteristics of street. This reaserch try to answer two questions: 
-1. Which urban design qualities have significant effects on the average value of walkability and how much are the effects ?
-2. Which physical features have significant effects on the average scores of urban design qulities and how much are the effects?
-
-The research team select nine from 51 perceptual qualities, 48 from more than video clips, and selest 10 urban design and planning experts. 
+The study by @ewing2006identifying attempts to quantitatively measure five urban design qualities in terms of physical characteristics of street for walkability.
+The research team selected nine from 51 perceptual qualities, 48 from more than 200 video clips, and 10 urban design and planning experts. 
 The expert panel are invloved in defining the 'operational' and give the walkability ratings for each clips and assign a score for each quality on a scale from 1 (low) to 5 (high).
-
 This study used the fractional factorial design, the crossed multilevel Design, random effects models, and linear regression models to built up the relationship among physical teatures, urban design qulities ad overall walkability.
 
-At the end the team dropped four qualities and choose imageability, enclosure, human scale, and transparency as the measurement of walkability. This study found that 38 of more than 130 physical features have significant effects on one or more perceptual qualities.
+At the end the team dropped four qualities and choose imageability, enclosure, human scale, and transparency as the measurement of walkability based on five criteria including significant level, ICC [^1], and variance components. This study found that 38 of more than 130 physical features have significant effects on one or more perceptual qualities.
 In a later paper, @ewing2009measuring gave all the consensus qualitaitive definiations and operational definitions for each qualities and identify detailed physical features associated with each qualitty
+
+[^1]: Intraclass Correlation Coefficient reflects the proportion of the variance of an observation that is the result of differences between treatments.
 
  - Discussion: predetermined or prior information.
 
-In the part of experiment design, research team define their purpose are "trying to operationalize design concepts, not assess public preferences". They believe "average person" cannot rate streetscapes as to their “legibility,” “transparency,” and so on. The selection of video clips is also to match the perceptual qualities. At the end, this study use five criteria to examine which urban design qualities are more amenable and would be defined operationally in the field survey instrument. The criteria include the significant level in regression models, the ICC (Intraclass Correlation Coefficient reflects the proportion of the variance of an observation that is the result of differences between treatments) and Variance Components in random effects models. Technically, this reaserch is for comparing which qualities are more operational rather than proving the relationship between walkability and physical features. 
+Inversing input and output. The team selected 48 clips that "best matched the combinations of high/low values in a $2^{8-4}$ fractional factorial design (FFD)." FFD is for simplify and improve experiment. [^2] [@montgomery2017design] Through examining all the combination of factors, the result of FFD should tell us which factors and interactions are improtant or non-negligible. On the contrary, this reaserch use FFD as a method of sample selection. "The $2^{8-4}$ sample allowed us to capture the main effects [^3] of each urban design quality on overall walkability,...to maximize geographic diversity." [@clemente2005identifying]
+Actually, what this step do is not sample selection, is treatment selecetion. The 48 clips were rated by viewer in the next step giving $480$ observations on walkability and $480\times9$ observations on qualities. 
 
-The part of the fractional factorial design (FFD) is puzzling. FFD is for simplify and improve experiment. [^1] The $2^{8-4}$ FFD means k=8 factors, p=4 independent generators and 48 observations can assign each of 16 runs with 3 replication. Properly choosing the generators make the effects of potential interest are not aliased with each other. The result of FFD should tell us which factors and interactions are improtant and negligible. However, the papar don't provide the list of generators and alias, don't clarify which factors are confounded and which factors and interaction have significant effects. 
+The $2^{8-4}$ FFD means k=8 factors, p=4 independent generators and 48 observations can assign each of 16 runs with 3 replication. Properly choosing the generators make the effects of potential interest are not aliased with each other.  However, the papar don't provide the list of generators and alias, don't clarify which factors are confounded and which factors and interaction have significant effects. 
 
-[^1]: "A major use of fractional factorials is in screening experiments—experiments in which many factors are considered and the objective is to identify those factors that have large effects. Screening experiments are usually performed in the early stages of a project when many of the factors initially considered likely have little or no effect on the response. The factors identified as important are then investigated more thoroughly in subsequent experiments."
+[^2]: "A major use of fractional factorials is in screening experiments—experiments in which many factors are considered and the objective is to identify those factors that have large effects. Screening experiments are usually performed in the early stages of a project when many of the factors initially considered likely have little or no effect on the response. The factors identified as important are then investigated more thoroughly in subsequent experiments."
 
-On the contrary, this reaserch use FFD as a method of sample selection. "The $2^{8-4}$ sample allowed us to capture the main effects of each urban design quality on overall walkability,...to maximize geographic diversity." [@clemente2005identifying]
-Actually, what this step do is not sample selection, is treatment selecetion. The 48 clips are be rated by viewer in the next step. 
-Moreover, a significant interaction will often mask the significance of main effects. In the presence of significant interaction, the experimenter must usually examine the levels of one factor, say A, with levels of the other factors fixed to draw conclusions about the main effect of A.
+[^3]: In FFD, "significant interaction will often mask the significance of main effects. In the presence of significant interaction, the experimenter must usually examine the levels of one factor, say A, with levels of the other factors fixed to draw conclusions about the main effect of A."
 
-The 48 clips are selceted to match the selection of qualities. The raters have simular opinions on them, and highly consistent with previous literatures. Both of the viewers and the scenes are not randomly selected. The relationship about qualities and walkability are predetermined. It just prove some qualities are more measurable than others. 
+The nonrandomized 'random effects models'. At the beginning of research design, research team define their purpose are "trying to operationalize design concepts, not assess public preferences". They believe "average person" cannot rate streetscapes as to their “legibility,” “transparency,” and so on. The expert define the criteria and rate the clips being selceted to match some designated qualities. Both of the viewers and the scenes are not randomly selected. These fixed treatments don't satisfy the assumptions of random effects models. It is not strange that "eight of the nine qualities were collinear. Tolerance values were unacceptably low when all variables were included in a regression at once." In this situation, we cannont extend the conclusions to all treatments in the population. Technically, this reaserch selected 5 from 9 urban design qualities are more amenable and would be defined operationally in the field survey instrument. The relationship about qualities and walkability are predetermined.
 
-It is not strange that "eight of the nine qualities were collinear. Tolerance values were unacceptably low when all variables were included in a regression at once." In this situation, we cannont extend the conclusions to all treatments in the population.
 
-To examine the true relationship 
 
-"The Bayesian paradigm prescribes that the sample information $f(\vec x|\theta)$ be combined with the prior information $\pi(\theta)$ using Bayes' Theorem to obtain the posterior distribution $\pi(\theta|\vec x)$. All inferences about $\theta$ are now based on the posterior distribution."
+It is also not enough to examine the relationship between walkability and physical features by significant level in linear regression. We can look this study as an iteration of the Bayesian paradigm. The prior information $\pi(\theta)$ (qualities) combined with the sample information $f(\vec x|\theta)$ (viewers and scenes) to obtain the posterior distribution $\pi(\theta|\vec x)$. [@casella2002statistical] Collecting more and more scenes and viewers to train the models and draw the inference. 
 
 
 References {#references .unnumbered}
